# RL-SSM

./: .gitignore  Differentiable_RLSSM.ipynb  PyTensor_for_HSSM.ipynb  PyTensor_for_RL.ipynb  README.md  RLWM_SSM_differentiable.ipynb  RL_Practice.ipynb  RL_Practice_af.ipynb  pyproject.toml  requirements.txt  rlwm_testing.ipynb
docs/: RL_Practice.ipynb
likelihood/: rlwm.py
models/: rescola.py
rl/: distribution.py  multi.py  rl_callibration.py  rl_ll.py  rl_pymc.py  rl_pytensor.py  simple.py  synthetic_model.py
tasks/: bandit.py
tests/: slurm-12074212.err  slurm-12074212.out  slurm-12074213.err  slurm-12074213.out  slurm-12074214.err  slurm-12074214.out  slurm-12074215.err  slurm-12074215.out  slurm-12074216.err  slurm-12074216.out  slurm-12074217.err  slurm-12074217.out  slurm-12074218.err  slurm-12074218.out  slurm-12074219.err  slurm-12074219.out  slurm-12074220.err  slurm-12074220.out  slurm-12074221.err  slurm-12074221.out  slurm-12074222.err  slurm-12074222.out  slurm-12074223.err  slurm-12074223.out  slurm-12074224.err  slurm-12074224.out  slurm-12074225.err  slurm-12074225.out  slurm-12074226.err  slurm-12074226.out  slurm-12074227.err  slurm-12074227.out  slurm-12074228.err  slurm-12074228.out  slurm-12074229.err  slurm-12074229.out  slurm-12074230.err  slurm-12074230.out  slurm-12074231.err  slurm-12074231.out  (+22 more)
tests/tests/: rl  test_rl_calibration.py
