[tool.poetry]
name = "rl-ssm"
version = "0.1.0"
description = ""
authors = ["TheLemonPig <joshua_hewson@brown.edu>"]
readme = "README.md"
packages = [{include = "rl_ssm"}]

[tool.poetry.dependencies]
requires-python = ">=3.8,<4"

# ADD NEW DEPENDENCIES HERE
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "pandas",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

